# funtable

./: pyproject.toml
funtable/kv/: __init__.py  interface.py  tinydb_table.py
src/funtable/kv/: __init__.py  interface.py  sqlite_table.py  test_table.py  tinydb_table.py
src/funtable/sqlmodel/: base.py
