[project]
name = "funtable"
version = "1.0.32"
description = "funtable"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "fundrive>=1.2.18", "funutil>=1.0.5", "tinydb>=4.8.2",]
[[project.authors]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.authors]]
name = "farfarfun"
email = "farfarfun@qq.com"

[[project.maintainers]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.maintainers]]
name = "farfarfun"
email = "farfarfun@qq.com"

[project.urls]
Organization = "https://github.com/farfarfun"
Repository = "https://github.com/farfarfun/funtable"
Releases = "https://github.com/farfarfun/funtable/releases"

[tool.setuptools]
license-files = []
