[project]
name = "funtable"
version = "1.0.35"
description = "funtable"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "funutil>=1.0.5",]
[[project.authors]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.authors]]
name = "farfarfun"
email = "farfarfun@qq.com"

[[project.maintainers]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.maintainers]]
name = "farfarfun"
email = "farfarfun@qq.com"

[project.urls]
Organization = "https://github.com/farfarfun"
Repository = "https://github.com/farfarfun/funtable"
Releases = "https://github.com/farfarfun/funtable/releases"

[project.optional-dependencies]
sqlmodel = [ "sqlmodel>=0.0.24",]
snapshot = [ "fundrive>=2.0.8",]
kv = [ "tinydb>=4.8.2",]

[tool.setuptools]
license-files = []
